--- a/app/src/main/res/menu/navigation_menu_items.xml
+++ b/app/src/main/res/menu/navigation_menu_items.xml
@@ -1,29 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/home"
-        android:title="Home"
-        android:icon="@drawable/ic_home"/>
+    <group
+        android:checkableBehavior="single">
+        <item android:id="@+id/home"
+            android:title="Home"
+            android:checkable="true"
+            android:icon="@drawable/ic_home"/>
 
-    <item android:id="@+id/message"
-        android:title="Message"
-        android:icon="@drawable/ic_message"/>
+        <item android:id="@+id/message"
+            android:title="Message"
+            android:checkable="true"
+            android:icon="@drawable/ic_message"/>
 
-    <item android:id="@+id/sync"
-        android:title="Sync"
-        android:icon="@drawable/ic_sync"/>
+        <item android:id="@+id/sync"
+            android:title="Sync"
+            android:checkable="true"
+            android:icon="@drawable/ic_sync"/>
 
-    <item android:id="@+id/trash"
-        android:title="Trash"
-        android:icon="@drawable/ic_trash"/>
+        <item android:id="@+id/trash"
+            android:title="Trash"
+            android:checkable="true"
+            android:icon="@drawable/ic_trash"/>
 
-    <item android:id="@+id/settings"
-        android:title="Settings"
-        android:icon="@drawable/ic_settings"/>
+        <item android:id="@+id/settings"
+            android:title="Settings"
+            android:checkable="true"
+            android:icon="@drawable/ic_settings"/>
+    </group>
+
 
     <item android:title="Profile">
         <menu>
             <item android:id="@+id/login"
                 android:title="Login"
+                android:checkable="true"
                 android:icon="@drawable/ic_login"/>
         </menu>
     </item>
@@ -32,10 +42,16 @@
         <menu>
             <item android:id="@+id/share"
                 android:title="Share"
+                android:checkable="true"
                 android:icon="@drawable/ic_share"/>
             <item android:id="@+id/rate_us"
                 android:title="Rate us"
+                android:checkable="true"
                 android:icon="@drawable/ic_rate_us"/>
+            <item android:id="@+id/about"
+                android:title="About"
+                android:checkable="true"
+                android:icon="@drawable/ic_about"/>
         </menu>
     </item>
 
