--- a/app/src/main/res/menu/navigation_menu_items.xml
+++ b/app/src/main/res/menu/navigation_menu_items.xml
@@ -1,57 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <group
-        android:checkableBehavior="single">
-        <item android:id="@+id/home"
-            android:title="Home"
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/home"
             android:checkable="true"
-            android:icon="@drawable/ic_home"/>
+            android:icon="@drawable/ic_home"
+            android:title="Home" />
 
-        <item android:id="@+id/message"
-            android:title="Message"
+        <item
+            android:id="@+id/message"
             android:checkable="true"
-            android:icon="@drawable/ic_message"/>
+            android:icon="@drawable/ic_message"
+            android:title="Message" />
 
-        <item android:id="@+id/sync"
-            android:title="Sync"
+        <item
+            android:id="@+id/sync"
             android:checkable="true"
-            android:icon="@drawable/ic_sync"/>
+            android:icon="@drawable/ic_sync"
+            android:title="Sync" />
 
-        <item android:id="@+id/trash"
-            android:title="Trash"
+        <item
+            android:id="@+id/trash"
             android:checkable="true"
-            android:icon="@drawable/ic_trash"/>
+            android:icon="@drawable/ic_trash"
+            android:title="Trash" />
 
-        <item android:id="@+id/settings"
-            android:title="Settings"
+        <item
+            android:id="@+id/settings"
             android:checkable="true"
-            android:icon="@drawable/ic_settings"/>
+            android:icon="@drawable/ic_settings"
+            android:title="Settings" />
     </group>
 
 
     <item android:title="Profile">
         <menu>
-            <item android:id="@+id/login"
-                android:title="Login"
+            <item
+                android:id="@+id/login"
                 android:checkable="true"
-                android:icon="@drawable/ic_login"/>
+                android:icon="@drawable/ic_login"
+                android:title="Login" />
         </menu>
     </item>
 
     <item android:title="Communicate">
         <menu>
-            <item android:id="@+id/share"
-                android:title="Share"
-                android:checkable="true"
-                android:icon="@drawable/ic_share"/>
-            <item android:id="@+id/rate_us"
-                android:title="Rate us"
-                android:checkable="true"
-                android:icon="@drawable/ic_rate_us"/>
-            <item android:id="@+id/about"
-                android:title="About"
-                android:checkable="true"
-                android:icon="@drawable/ic_about"/>
+            <group android:checkableBehavior="single">
+                <item
+                    android:id="@+id/share"
+                    android:checkable="true"
+                    android:icon="@drawable/ic_share"
+                    android:title="Share" />
+                <item
+                    android:id="@+id/rate_us"
+                    android:checkable="true"
+                    android:icon="@drawable/ic_rate_us"
+                    android:title="Rate us" />
+                <item
+                    android:id="@+id/about"
+                    android:checkable="true"
+                    android:icon="@drawable/ic_about"
+                    android:title="About" />
+            </group>
         </menu>
     </item>
 
